Fix background color of testimonial in dark mode

--- a/src/components/homepage-users.module.scss
+++ b/src/components/homepage-users.module.scss
@@ -1,4 +1,4 @@
-@use '../css/variables' as *;
+@use "../css/variables" as *;
 
 .users {
   background-color: $brand-primary-dark;
@@ -46,7 +46,7 @@
   text-align: center;
 
   &::before {
-    content: '';
+    content: "";
     width: 30px;
     height: 30px;
     background: white;
@@ -55,6 +55,14 @@
     left: 50%;
     margin-left: -15px;
     transform: rotate(45deg);
+  }
+}
+
+html[data-theme="dark"] .testimonialWrapper {
+  background: var(--ifm-color-primary-dark);
+
+  &::before {
+    background: var(--ifm-color-primary-dark);
   }
 }
 
@@ -67,7 +75,7 @@
   opacity: 0.5;
 
   &::before {
-    content: '–';
+    content: "–";
     margin-right: 0.5rem;
   }
 }
